--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@ layout: default
   {{ content }}
 
 
+{% comment %}
   {% if site.paginate %}
     {% assign posts = paginator.posts %}
   {% else %}
@@ -57,5 +58,5 @@ layout: default
     {%- endif %}
 
   {%- endif -%}
-
+{% endcomment %}
 </div>
