initial /people page

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,11 @@
+{%- if include.social %}
+{%- assign social = include.social -%}
+{%- else %}
 {%- assign social = site.minima.social_links -%}
+{%- endif %}
 
 <ul class="social-media-list">
+  {%- if social.email -%}<li><a href="mailto:{{ social.email | cgi_escape | escape }}" title="{{ social.email | escape }}"><svg class="svg-icon grey"><text font-size="1em" textLength="16px" y="13px">@</text></svg></a></li>{%- endif -%}
   {%- for glb in social.gitlab -%}{%- if glb.username and glb.instance -%}<li><a rel="me" href="https://{{ glb.instance | cgi_escape | escape}}/{{glb.username}}" title="{{ glb.username | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#gitlab' | relative_url }}"></use></svg></a></li>{%- endif -%}{%- endfor -%}
   {%- if social.dribbble -%}<li><a rel="me" href="https://dribbble.com/{{ social.dribbble | cgi_escape | escape }}" title="{{ social.dribbble | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#dribbble' | relative_url }}"></use></svg></a></li>{%- endif -%}
   {%- if social.facebook -%}<li><a rel="me" href="https://www.facebook.com/{{ social.facebook | cgi_escape | escape }}" title="{{ social.facebook | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#facebook' | relative_url }}"></use></svg></a></li>{%- endif -%}
@@ -18,4 +23,6 @@
   {%- if social.keybase -%}<li><a rel="me" href="https://keybase.io/{{ social.keybase | cgi_escape | escape }}" title="{{ social.keybase | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#keybase' | relative_url }}"></use></svg></a></li>{%- endif -%}
   {%- if social.microdotblog -%}<li><a rel="me" href="https://micro.blog/{{ social.microdotblog | cgi_escape | escape }}" title="{{ social.microdotblog | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#microdotblog' | relative_url }}"></use></svg></a></li>{%- endif -%}
   {%- if social.devto -%}<li><a href="https://dev.to/{{ social.devto | cgi_escape | escape }}" title="{{ social.devto | escape }}"><svg class="svg-icon grey"><use xlink:href="{{ '/assets/minima-social-icons.svg#devto' | relative_url }}"></use></svg></a></li>{%- endif -%}
+  {%- if social.scholar -%}<li><a href="https://scholar.google.de/citations?user={{ social.scholar | cgi_escape | escape }}" title="{{ social.scholar | escape }}"><svg class="svg-icon grey"><text font-size="1em" textLength="16px" y="13px">G+</text></svg></a></li>{%- endif -%}
+  {%- if social.researchgate -%}<li><a href="https://www.researchgate.net/profile/{{ social.researchgate | cgi_escape | escape }}" title="{{ social.researchgate | escape }}"><svg class="svg-icon grey"><text font-size="1em" textLength="16px" y="13px">RG</text></svg></a></li>{%- endif -%}
 </ul>
