--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -1,30 +1,37 @@
 ---
 layout: default
 ---
+<article class="app">
 
-<h1>{{ page.title }}</h1>
+  <header class="app-header">
+    <h1 class="app-title">{{ page.title | escape }}</h1>
+  </header>
 
-<h2>Abstract</h2>
+  <div class="app-content">
+    <h2>Abstract</h2>
 
-{{content}}
+    {{ content }}
 
-<h2>Links</h2>
+    <h2>Links</h2>
 
-<ul>
-  <li><a href="{{page.links.website}}">Official Website</a></li>
-  <li>Download <a href="{{page.links.download}}">binaries</a></li>
-  <li>View the source code and README on <a href="{{page.links.source}}">GitHub</a></li>
-</ul>
+    <ul>
+      <li><a href="{{page.links.website}}">Official Website</a></li>
+      <li>Download <a href="{{page.links.download}}">binaries</a></li>
+      <li>View the source code and README on <a href="{{page.links.source}}">GitHub</a></li>
+    </ul>
 
-<h2>Please Cite</h2>
+    <h2>Please Cite</h2>
 
-<p>{%- include cite.html cite=page.cite -%}</p>
+    <p>{%- include cite.html cite=page.cite -%}</p>
 
-<h2>Contact</h2>
+    <h2>Contact</h2>
 
-<p>For questions, comments, or suggestions please contact:</p>
+    <p>For questions, comments, or suggestions please contact:</p>
 
-{% assign author = site.people | where:"name", page.contact | first %}
+    {% assign author = site.people | where:"name", page.contact | first %}
 
-{{ author.name }}
-<a href="mailto:{{author.social_links.email}}">{{author.social_links.email}}</a>
+    {{ author.name }}
+    <a href="mailto:{{author.social_links.email}}">{{author.social_links.email}}</a>
+  </div>
+
+</article>
