--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,3 +5,9 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
+
+.site-logo
+{
+    max-height: 44px;
+    padding: 5px;
+}
