sticky back-to-top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body id="top">
 
     {%- include header.html -%}
 
@@ -11,10 +11,12 @@
       <div class="wrapper">
         {{ content }}
       </div>
+      <div class="back-to-top-wrapper">
+        <a href="#top" class="back-to-top-link" aria-label="Scroll to Top">˄</a>
+      </div>
     </main>
 
     {%- include footer.html -%}
 
   </body>
-
 </html>
