--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -179,7 +179,6 @@ main {
 .news-header {
   font-size: 1.25em;
   color: white;
-  margin-bottom: 1em;
 }
 .news-date-month-year {
   background: $seqan-color;
@@ -196,11 +195,11 @@ main {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  line-height: 3.5em;
+  line-height: 0.5em;
   vertical-align: middle;
-  margin-top: -1.5em;
   width: 2.5em;
-  height: 2.5em;
+  height: 1.5em;
+
 }
 .news-date-day::before {
   display: block;
@@ -212,7 +211,7 @@ main {
   position: absolute;
   z-index: -1;
   left: 0px;
-  top: 0px;
+  top: -1.5em;
 }
 .news-body {
   padding: 0em 0.75em 0.75em;
