--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <body id="top">
 
     {%- include header.html -%}
+    {%- include page_hero.html -%}
 
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
