--- a/_includes/page_hero.html
+++ b/_includes/page_hero.html
@@ -1,4 +1,18 @@
 {% if page.header %}
+  {% if page.header.overlay_image %}
 <div class="page-header" style="background-image: url({{ page.header.overlay_image | relative_url }})">
 </div>
+  {% endif %}
+  {% if page.header.openstreetmap %}
+<div class="page-header">
+  {% assign openstreetmap_url = "https://www.openstreetmap.org/export/embed.html?bbox=" |
+                                append: page.header.openstreetmap.bbox |
+                                append: "&amp;layer=" |
+                                append: page.header.openstreetmap.layer |
+                                append: "&amp;" |
+                                append: "marker=" |
+                                append: page.header.openstreetmap.marker %}
+  <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="{{ openstreetmap_url | relative_url }}" ></iframe>
+</div>
+  {% endif %}
 {% endif %}
