--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -32,4 +32,12 @@
 .person:hover{
     background-color: #fede09;
     transition: 0.2s;
+.citation{
+    color: grey;
+    background: white;
+}
+
+.citation-details{
+    background: grey;
+    border-radius: 5px;
 }
