--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,13 @@
           {%- endif %}
         </ul>
       {%- endif %}
+      {%- if jekyll.environment == "vercel" -%}
+        <p>
+          <a href="https://vercel.com/?utm_source=seqan&utm_campaign=oss">
+            <img src="{{ 'assets/images/icons/powered-by-vercel.svg' | relative_url }}" />
+          </a>
+        </p>
+      {%- endif -%}
       </div>
       <div class="footer-col">
         <p>{{ site.description | escape }}</p>
