[FEATURE] Publications are now read from a yml file… (#2)
* [FEATURE] Publications are now read from a yml file and formatted correctly. The year is taken from the date property which is truncated after the first four digits. The publications file has yet to be automatically fetched from the FU publicaitions page as json file and translated into a yml file. the datestamp now acts as the unique key of every publication and needs to be passed in single quotes.

* [FEAT] Generate collapsible Bibtex entries.

* [FEAT] Process Publications with python and slightly change the appereance.

* Update _includes/cite.html

* Update _includes/cite.html

* Update _includes/cite.html

* Apply suggestions from code review

Co-authored-by: Marcel <marehr@users.noreply.github.com>

--- a/_includes/cite.html
+++ b/_includes/cite.html
@@ -1,10 +1,16 @@
-{%- assign cite = site.data.publications | where: "id", include.cite | first -%}
+{%- assign cite = site.data.publications | where: "key", include.cite | first -%}
 {%- if cite -%}
-    {{ cite.author }}
-    {%- if cite.doi -%}
-    , <a href="https://doi.org/{{ cite.doi }}">“{{ cite.title }}”</a>
+    {%- for creator in cite.creators -%}
+        {{creator.name.given}} {{creator.name.family}},
+    {% endfor %}
+    {%- for editor in cite.editors -%}
+        {{editor.name.given}} {{editor.name.family}},
+    {% endfor %}
+
+    {%- if cite.official_url -%}
+     <a href="{{ cite.official_url }}">“{{ cite.title }}”</a>
     {%- else -%}
-    , “{{ cite.title }}”
+    “{{ cite.title }}”
     {%- endif -%}
 
     {%- if cite.journal -%}
@@ -23,10 +29,16 @@
     , p. {{ cite.pages }}
     {%- endif -%}
 
-    {%- if cite.year -%}
-    , {{ cite.year }}
+    {%- if cite.date -%}
+    , {{ cite.date }}
     {%- endif -%}
     .
+    <details>
+        <summary class="citation">cite this publication</summary>
+        {% highlight bibtex -%}
+        {{ cite.bibtex | strip }}
+        {%- endhighlight %}
+    </details>
 {%- else -%}
 ERROR: no citation found
 {%- endif -%}
