--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -197,6 +197,16 @@ main {
 .heading-link {
   display: block;
 }
+.heading-link
+{
+    &:hover, &:focus
+    {
+        .heading-icon
+        {
+            background: #9e9e9e;
+        }
+    }
+}
 .heading-icon {
   display: block;
   box-sizing: border-box;
@@ -208,13 +218,14 @@ main {
   margin: #{$spacing-unit / 2} auto;
   border-radius: 100px;
   background: $seqan-color;
+  transition: background-color .3s, color .3s;
 }
 .heading-icon img {
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
-  border-radius: 100px;
-  padding: 5px;
+  width: 50px;
+  // height: 100px;
+  // object-fit: contain;
+  // border-radius: 100px;
+  // padding: 5px;
   box-sizing: border-box;
   filter: invert(1);
 }
