--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,37 +2,4 @@
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
 
-.avatar{
-    object-fit: cover;
-    height: 3.5vw;
-    width: 3.5vw;
-    margin-right: 2vw;
-    border-radius: 50%;
-}
-.person-div{
-    width: 100%;
-    margin-left: 6.5vw;
-}
-.bio{
-    position: relative;
-    width: 80%
-}
-.category{
-    @include relative-font-size(2);
-}
-.person{
-    position: relativ;
-    padding: 1%;
-    @include relative-font-size(1.5);
-    border-radius: 25px;
-}
-.person::-webkit-details-marker {
-    display: none;
-  }
-.person:hover{
-    background-color: #fede09;
-    transition: 0.2s;
-}
-.citation{
-    color: grey;
-}
+// please use `assets/css/style.scss`
