[FEAT] Adding new CSS for header images of apps. These images are now always fully contained and not cropped so that all information on these images is displayed.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -60,6 +60,16 @@ $news-entry-sep: 1.5em !default;
   max-height: 434px;
 }
 
+.app-image {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 434px;
+  height: 50vw;
+  min-height: 200px;
+  max-height: 434px;
+}
+
 // ====== Sticky back-to-top ======
 
 /* https://moderncss.dev/pure-css-smooth-scroll-back-to-top/ by Stephanie Eckles */
