--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -5,9 +5,8 @@ layout: default
 
   <header class="app-header">
     {% if page.header.app_image %}
-<div class="app-image" style="background-image: url({{ page.header.app_image | relative_url }})">
-</div>
-  {% endif %}
+    <div class="app-image" style="background-image: url({{ page.header.app_image | relative_url }})"></div>
+    {% endif %}
     <h1 class="app-title">{{ page.title | escape }}</h1>
   </header>
 
