[FEAT] Adding new CSS for header images of apps.  (#11)
* [FEAT] Adding new CSS for header images of apps. These images are now always fully contained and not cropped so that all information on these images is displayed.

* Update _layouts/app.html

Co-authored-by: Marcel <marehr@users.noreply.github.com>

--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -4,6 +4,9 @@ layout: default
 <article class="app">
 
   <header class="app-header">
+    {% if page.header.app_image %}
+    <div class="app-image" style="background-image: url({{ page.header.app_image | relative_url }})"></div>
+    {% endif %}
     <h1 class="app-title">{{ page.title | escape }}</h1>
   </header>
 
