--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -25,7 +25,7 @@ layout: default
 
     <h2>Please Cite</h2>
       {% for citation in page.cite %}
-        <p>{%- include cite.html cite=citation -%}</p>
+        <ul><li>{%- include cite.html cite=citation -%}</li></ul>
       {% endfor %}
     <h2>Contact</h2>
 
