[FIX] Apply 1st review. Move style to css and make figures floating and high resolution.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -376,3 +376,22 @@ main {
 .citation {
     color: grey;
 }
+
+// ====== Subpages Style ======
+
+.floating-figure{
+  float: left;
+  max-width: 400px;
+  width: 100%;
+  margin: 10px 10px;
+}
+
+.wide-figure{
+  float: left;
+  width: 100%;
+  margin: 10px 10px;
+}
+
+.fig-caption{
+  color: grey;
+}
