[FIX] icons sometimes not showing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -124,7 +124,7 @@ a {
     text-decoration: underline;
   }
 
-  .social-media-list &:hover {
+  .various-media-list &:hover {
     text-decoration: none;
 
     .username {
