--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -356,10 +356,7 @@ main {
 }
 
 details.person[open]{
-    border-style: solid;
-    border-width: 0px;
-    border-bottom-width: 1px;
-    border-color: $seqan-color;
+    border-bottom: 1px solid $seqan-color;
     margin-bottom: $spacing-unit;
 }
 
