--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -333,8 +333,11 @@ main {
     padding: 0.5em;
     @include relative-font-size(1.5);
     border-radius: 6px;
+    margin-bottom: $spacing-unit;
+    outline: none;
 
-    &:hover {
+    // highlight the summary of a person when hovering, or if the person is unfolded
+    &:hover, details.person[open] & {
         background-color: $seqan-color;
         transition: 0.2s;
     }
@@ -350,6 +353,12 @@ main {
 
 .person-bio {
     margin-left: $spacing-unit;
+    margin-right: $spacing-unit;
+}
+
+details.person[open] {
+    border-bottom: 1px solid $seqan-color;
+    margin-bottom: $spacing-unit;
 }
 
 .person-name-position {
